--- a/MultipleActivities/app/src/main/AndroidManifest.xml
+++ b/MultipleActivities/app/src/main/AndroidManifest.xml
@@ -8,6 +8,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <uses-permission android:name="android.permission.CAMERA" />
+
+        <uses-feature android:name="android.hardware.camera" />
+
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -19,8 +25,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Activity1"
-            android:label="@string/title_activity_1"
+            android:name=".ImageViewerActivity"
+            android:label="ImageViewerActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Activity2"
@@ -33,7 +39,12 @@
         <activity
             android:name=".Activity4"
             android:label="@string/title_activity_4"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ImageViewerActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_image_viewer"
+            android:theme="@style/FullscreenTheme"></activity>
     </application>
 
 </manifest>
