--- a/MultipleActivities/app/src/main/AndroidManifest.xml
+++ b/MultipleActivities/app/src/main/AndroidManifest.xml
@@ -2,49 +2,26 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.multipleactivities.sl28.multipleactivities">
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <uses-permission android:name="android.permission.CAMERA" />
+<application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name"
+    android:supportsRtl="true" android:theme="@style/AppTheme">
+    <uses-permission android:name="android.permission.CAMERA" />
 
-        <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera" />
 
-        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+    <activity android:name=".MainActivity" android:label="@string/app_name" android:theme="@style/AppTheme.NoActionBar">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".ImageViewerActivity"
-            android:label="ImageViewerActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".Activity2"
-            android:label="@string/title_activity_2"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".Activity3"
-            android:label="@string/title_activity_3"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".Activity4"
-            android:label="@string/title_activity_4"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".ImageViewerActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_image_viewer"
-            android:theme="@style/FullscreenTheme"></activity>
-    </application>
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
+    <activity android:name=".Activity2" android:label="@string/title_activity_2" android:theme="@style/AppTheme.NoActionBar" />
+    <activity android:name=".Activity3" android:label="@string/title_activity_3" android:theme="@style/AppTheme.NoActionBar" />
+    <activity android:name=".Activity4" android:label="@string/title_activity_4" android:theme="@style/AppTheme.NoActionBar" />
+    <activity android:name=".ImageViewActivity" android:label="@string/title_activity_image_view"
+        android:theme="@style/AppTheme.NoActionBar"/>
+</application>
 
 </manifest>
